# SpotifyRegression

./: .gitignore  LICENSE  README.md  pyproject.toml  spotify_regression.ipynb
report/: biblio.bib  main.tex
