[project]
name = "SpotifyRegression"
version = "1.0.0"
description = "Implementation of a (Kernel) Ridge Regression using the Spotify Tracks Dataset"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Luca Bellani"},
  {name = "Andrea Longoni"},
]
classifiers = [
  "Programming Language :: Python",
  "Framework :: IPython",
  "Framework :: Jupyter",
  "License :: OSI Approved :: MIT License"
]

dependencies = [
  "notebook",
  "pandas",
  "numpy",
  "scikit-learn",
  "kaggle",
]

[project.urls]
Repository = "https://github.com/lukebella/SpotifyRegression"